# bin-packing

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bindings/node/: Cargo.toml  LICENSE  README.md  native.js  package.json  pnpm-lock.yaml  wrapper.d.ts  wrapper.js
bindings/node/scripts/: sync-native-package.js
bindings/node/src/: lib.rs
bindings/node/test/: smoke.test.js
bindings/wasm/: Cargo.toml  README.md  package.json
bindings/wasm/scripts/: build.mjs
bindings/wasm/src/: lib.rs
bindings/wasm/test/: smoke.test.mjs
bindings/wasm/types/: bin_packing_wasm.d.ts  one_d.d.ts  three_d.d.ts  two_d.d.ts  web-init-one-d.d.ts  web-init-three-d.d.ts  web-init-two-d.d.ts  web-init.d.ts
crates/bin-packing/: Cargo.toml
crates/bin-packing/benches/: solver_benches.rs
crates/bin-packing/src/: cut_plan.rs  error.rs  lib.rs  parallel.rs
crates/bin-packing/src/one_d/: cut_plan.rs  exact.rs  heuristics.rs  mod.rs  model.rs
crates/bin-packing/src/three_d/: auto.rs  column.rs  common.rs  dblf.rs  exact.rs  extreme_points.rs  grasp.rs  guillotine.rs  layer.rs  local_search.rs  mod.rs  model.rs  multi_start.rs  sorted.rs  wall.rs
crates/bin-packing/src/two_d/: cut_plan.rs  drops.rs  guillotine.rs  kerf.rs  maxrects.rs  mod.rs  model.rs  rotation_search.rs  shelf.rs  skyline.rs
crates/bin-packing/tests/: consolidation_2d.rs  cut_plan_integration.rs  edge_kerf_relief_2d.rs  kerf_2d_regressions.rs  solver_regressions.rs
docs/: README.md
docs/one-d/: README.md  auto.md  best-fit-decreasing.md  column-generation.md  first-fit-decreasing.md  local-search.md
docs/three-d/: README.md  auto.md  branch-and-bound.md  deepest-bottom-left.md  extreme-points.md  guillotine.md  layer-building.md  meta-strategies.md  volume-sorted.md  wall-and-column.md
docs/two-d/: README.md  auto.md  guillotine.md  max-rects.md  multi-start.md  rotation-search.md  shelf.md  skyline.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: solver_inputs.rs  three_d_modules.rs
