[workspace]
members = ["crates/bin-packing", "bindings/node", "bindings/wasm"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/doublesharp/bin-packing"
rust-version = "1.94"
version = "0.1.1"

[workspace.dependencies]
arbitrary = { version = "1", features = ["derive"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "plotters", "rayon"] }
libfuzzer-sys = "0.4"
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-build = "2"
napi-derive = "3"
proptest = "1"
rayon = "1.10"
rand = { version = "0.9", default-features = false, features = ["small_rng", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
thiserror = "2"
wasm-bindgen = "0.2"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
